<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/arrow_back"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/xaba_red_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/national_id"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/national_id"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_national_id"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/confirm_national_id"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/phone_number"
            style="@style/EditTextStyle"
            android:layout_marginTop="10dp"
            android:inputType="phone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/county"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_county"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_county_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_county"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sub_county"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_sub_county"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_sub_county_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_sub_county"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#d9f2ba"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/program"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_program"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_program"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_program"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#d9f2ba"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_industry"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_industry_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_industry"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/dark_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/grp_category"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_category_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_category"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profession"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_profession"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_profession_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_profession"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_profession_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#d9f2ba"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_industry_two"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_industry_selection_two"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_industry"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/dark_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/grp_category_two"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_category_selection_two"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_category"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profession"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_profession_two"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_profession_selection_two"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_profession"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/remove_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/remove"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_profession_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#d9f2ba"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_industry_three"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_industry_selection_three"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_industry"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textColor="@color/dark_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/grp_category_three"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_category_selection_three"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_category"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profession"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_profession_three"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_profession_selection_three"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_profession"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/remove_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/remove"
            android:textSize="12sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_another_profession"
        style="@style/ButtonLinkStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add_another_profession"/>

</LinearLayout>


