...
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pin_code"
                android:textColor="@color/dark_color"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/pin_code"
                style="@style/EditTextStyle"
...
                android:id="@+id/referral_code"
                style="@style/EditTextStyle"
                android:layout_marginTop="10dp"
                android:inputType="number"/>

            <Button
                android:id="@+id/register"
                style="@style/ButtonGreenStyle"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/register"/>

        </LinearLayout>
...
