<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_edit_profile"
        android:layout_below="@id/toolbar"
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.sstgroup.xabaapp.ui.widgets.DimmedProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>


